add (p) for purse
also fix code a tad